[package]
name = "www-wasm"
version = "0.1.0"
authors = ["Shiva Tamil Kumaran <shivatk01@gmail.com>"]
description = "A simulation of a school of fish"
repository = "https://github.com/shiva-tk/fishes"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]
